Создала начальную версию GUI. Пока что без подвязки клиента. Реализованы окна подключения, логина, регистрации и чата с соответсвующими окнами ошибок. Для подключения javaFX: 1. Нужно распоковать архив openjfx-19_windows-x64_bin-sdk.zip 2. File -> Project Structure -> Libraries. Загружаете папку javafx-sdk-19\lib. 3. Далее edit configurations -> modify options -> VM options: --module-path "\path\to\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml Добавлен архив sqlite-jdbc-3.40.0.0.zip для подключения к базе данных. Для использования нужно: 1. Распаковать sqlite-jdbc-3.40.0.0.zip 2. File -> Project Structure -> Libraries -> "+" 3. Добавить sqlite-jdbc-3.40.0.0.jar 4. Apply